// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoItem components ItemCheck render successfully 1`] = `
.c0 {
  margin-right: 10px;
  height: 18px;
  width: 18px;
  cursor: pointer;
}

.c0:focus {
  outline: 0;
}

<input
  className="c0"
/>
`;

exports[`TodoItem components ItemContainer render successfully 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  width: 80%;
  border-bottom: 1px solid #cecece;
  font-weight: 100;
  font-size: 18px;
}

.c0:hover .erase {
  display: inline-block;
}

<div
  className="c0"
/>
`;

exports[`TodoItem components ItemDelete render successfully 1`] = `
.c0 {
  background-color: #fb4f42;
  border: none;
  border-radius: 2px;
  color: white;
  padding: 5px 10px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: none;
  font-size: 12px;
  cursor: pointer;
}

.c0:hover {
  background-color: #fb4f42c9;
}

.c0:focus {
  outline: 0;
}

<button
  className="c0"
/>
`;

exports[`TodoItem components ItemName completed render successfully 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #cdcdcd;
  font-style: italic;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<p
  className="c0"
/>
`;

exports[`TodoItem components ItemName render successfully 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #333333;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<p
  className="c0"
/>
`;
